# SmartAnalysis

./: .gitignore  Makefile  README.md  TODO  componi.ml  lib.ml  parser_combinators.README  qElim.ml  smartCalculus.ml
behavioral_types/: .depend  .depend_analyzer  .gitignore  .merlin  .out.sol.swp  Makefile  README  ace_microsolidity.js  analyzer.ml  analyzerlib.js  cofloco.ml  cofloco.mli  compiler  compiler.ml  compiler_test  costEquationsGeneration.ml  costEquationsGeneration.mli  dune  grammar.ml  index.html  lib.ml  lib.mli  microSolidity.ml  microSolidity.mli  parser  parser.ml  parser.mli  parserCombinator.ml  parserCombinator.mli  parserCombinators.ml  parserCombinators.mli  pyTest.ml  pythonDeploy.ml  smartCalculus.ml  solidity.ml  solidity_test.ml  static.ml  static.mli  staticAnalyzer.ml  staticAnalyzer_test  (+8 more)
behavioral_types/ace/: MicroSolidity.js  ace_microsolidity.js  mode-microsolidity.js  oop.js  text_highlight_rules.js
behavioral_types/demo/: demo.md  demo1.sol  english_auction1.sol  english_auction2.sol  papero1.sol  papero2.sol  papero3.sol  papero4.sol  papero5.sol  papero6X.sol  test.py  transf-example
old/: componi.ml.saved  componi_ok  componi_ok.ml
parser/: .bin.swp  .compiler.ml.swm  .compiler.ml.swn  .compiler.ml.swo  .compiler.ml.swp  .exrc  .grammar.ml.swo  .grammar.ml.swp  .input.swo  .input.swp  .make: *** [Makefile.swp  .out.sol.swp  .parserCombinator.ml.swo  .parserCombinator.ml.swp  .pythonDeploy.ml.swp  .simple_citizen.swp  .smartCalculus.ml.swo  .smartCalculus.ml.swp  .test.py.swp  .test.swp  .test2.py.swp  Makefile  c_abi.json  (+17 more)
(+8 files in other folders)
