(executables
  (names analyzer)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (targets analyzer.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
       --source-map %{dep:analyzer.bc} -o %{targets}  --pretty)))

(alias
  (name default)
  (deps analyzer.js index.html))
